add book handler error adjustment && setup swagger
